# MiniTorch-Compiler-LLVM

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
benchmarks/: bench.py
docs/: build_notes.md  graph_ir.md  language_spec.md  pass_design.md  pytorch_comparison.md
examples/: attention_head.py  matmul.py  mlp_forward.py
include/: ast.h  codegen.h  graph.h  lexer.h  parser.h  typechecker.h
include/passes/: constant_fold.h  cse.h  dce.h  op_fusion.h
python/minitorch/: __init__.py  driver.py
scripts/: dev_env.sh
src/: ast.cpp  codegen.cpp  graph.cpp  lexer.cpp  main.cpp  parser.cpp  typechecker.cpp
src/passes/: constant_fold.cpp  cse.cpp  dce.cpp  op_fusion.cpp
tests/: test_main.cpp
